--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,6 +20,7 @@ layout: default
           {% if page.tags.size >= 1 %}
           <div class="post__tags">
             {% for tag in page.tags %}
+            <span class="post__tags-tag">{{ tag }}</span>
             {% endfor %}
           </div>
           {% endif %}
@@ -52,6 +53,11 @@ layout: default
       <div class="post__share">
         <span class="share__title">Share this article:</span>
         <ul class="share__list list-reset">
+          <li class="share__item">
+            <a class="share__facebook" href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ site.baseurl }}{{ page.url }}"
+              onclick="window.open(this.href, 'pop-up', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;"
+              title="Share on Facebook" rel="nofollow"><i class="ion ion-logo-facebook"></i></a>
+          </li>
 
           <li class="share__item">
             <a class="share__twitter" href="https://twitter.com/intent/tweet?text={{ page.title | uri_escape }}&url={{ site.url }}{{ site.baseurl }}{{ page.url }}"
